# infrastructure

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  kubeseal-public.pem  makefile  package.json  pnpm-lock.yaml  pyproject.toml  secrets.sh  test.yaml  test2.yaml  yamllint
.husky/: pre-commit
ansible/: ansible.cfg  inventory.yml  requirements.yml  vm.yml
ansible/secrets/: linode.yaml
argocd/base/: application-argocd-plugins.yaml  application-argocd.yaml  application-cicd.yaml  application-cloud.yaml  application-dns.yaml  application-factorio.yaml  application-git.yaml  application-gitea.yaml  application-monitoring.yaml  application-projects.yaml  application-root.yaml  application-secrets.yaml  application-servers.yaml  application-support.yaml  application-vault.yaml  application-websites.yaml  kustomization.yaml
argocd/plugins/: argocd-lovely-plugin.yaml  kustomization.yaml
argocd/projects/: kustomization.yaml  project-applications.yaml  project-argocd.yaml  project-cicd.yaml  project-cloud.yaml  project-dns.yaml  project-factorio.yaml  project-git.yaml  project-gitea.yaml  project-monitoring.yaml  project-secrets.yaml  project-servers.yaml  project-support.yaml  project-vault.yaml  project-websites.yaml
charts/: README.md
documentation/: why_kubernetes.org
localhost/: argocd-login.sh  kind.yaml  run.sh
localhost/home_network/: flake.nix  pyproject.toml  result  shell.nix  web_service
localhost/home_network/home_network/: main.py
localhost/home_network/src/: main.py
terraform/: README.org  environments.yml  terragrunt.hcl
(+291 files in other folders)
