[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "python pre-commit hooks"
authors = ["vanderscycle <henri-vandersleyen@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
