[tool.poetry]
name = "home-network"
version = "0.1.0"
description = ""
authors = ["Henri Vandersleyen <henri-vandersleyen@protonmail.com>"]
readme = "README.md"
packages = [{include = "home_network"}]

[tool.poetry.dependencies]
python = "^3.11"
diagrams = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
